# nanomud

./: .gitignore  LICENSE  README.md  pyproject.toml
nanomud/: __init__.py  __main__.py  builder_cmds.py  colors.py  commands.py  engine.py  models.py  plugins.py  server.py  settings.py  world.py
nanomud/templates/: fantasy.json  modern.json  scifi.json
tests/: test_engine.py
